docs(titles): ensure proper alignement and spacing with code in .bd-content-title

--- a/site/docs/4.3/assets/scss/_content.scss
+++ b/site/docs/4.3/assets/scss/_content.scss
@@ -72,7 +72,12 @@
 
 .bd-content-title {
   display: flex;
+  align-items: baseline;
   pointer-events: auto;
+
+  > code {
+    padding: 0 map-get($spacers, 1);
+  }
 }
 
 //
